# domain-crunch

./: Cargo.toml  README.md
src/: main.rs
