[package]
name = "domain-crunch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
hex = "0.4.3"
rand = "0.8.5"
rayon = "1.7.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
